# neuneu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/DataDecide-c4-300M/: arc_challenge.npy  arc_easy.npy  avg_losses_by_step.npy  boolq.npy  csqa.npy  hellaswag.npy  histograms_by_step.npz  histograms_by_step_invp.npz  mmlu_abstract_algebra.npy  mmlu_anatomy.npy  mmlu_astronomy.npy  mmlu_business_ethics.npy  mmlu_clinical_knowledge.npy  mmlu_college_biology.npy  mmlu_college_chemistry.npy  mmlu_college_computer_science.npy  mmlu_college_mathematics.npy  mmlu_college_medicine.npy  mmlu_college_physics.npy  mmlu_computer_security.npy  mmlu_conceptual_physics.npy  mmlu_econometrics.npy  mmlu_electrical_engineering.npy  mmlu_elementary_mathematics.npy  mmlu_formal_logic.npy  mmlu_global_facts.npy  mmlu_high_school_biology.npy  mmlu_high_school_chemistry.npy  mmlu_high_school_computer_science.npy  mmlu_high_school_european_history.npy  mmlu_high_school_geography.npy  mmlu_high_school_government_and_politics.npy  mmlu_high_school_macroeconomics.npy  mmlu_high_school_mathematics.npy  mmlu_high_school_microeconomics.npy  mmlu_high_school_physics.npy  mmlu_high_school_psychology.npy  mmlu_high_school_statistics.npy  mmlu_high_school_us_history.npy  (+30 more)
model/: best_model.pt  config.json
scripts/: collect_pythia_evals.py  convert_to_word_losses.py  datadecide_eval_runs.sh  eval_datadecide.slurm  eval_hf_model.slurm  train_metaloss.slurm  train_probe.slurm
scripts/eval/: full.sh  (+3 more)
src/: custom_trainer.py  eval.py  token_dataset.py  tokenize_and_save_corpus.py
(+97 files in other folders)
